# HelixOS

./: .envrc  .gitignore  .gitmodules  CMakeLists.txt  CREDITS  README.md  limine.conf
.github/workflows/: HelixOS_ARM64_build.yml
cmake/: flanterm.cmake.in  printf.cmake.in  toolchain-arm64.cmake  ubsan.cmake.in
kernel/: CMakeLists.txt
kernel/arch/: CMakeLists.txt
kernel/arch/arm64/: CMakeLists.txt  asm.s  exc_handler.c  helix.ld  irq_handler.c  start.s  vectors.s
kernel/devices/: CMakeLists.txt  gicv3.c  pl011.c  rtc.c  timer.c
kernel/devices/virtio/: virtio.c  virtio_blk.c  virtio_utils.c
kernel/fs/: ext2.c  gpt.c  mbr.c  vfs.c
kernel/fs/ext2/: ext2.c  ext2_utils.c
kernel/include/: alloc.h  arch.h  fb.h  framebuffer.h  heap.h  irq.h  kernel.h  kstdio.h  kstdlib.h  kstring.h  list.h  mm.h  pmm.h  slab.h  spinlock.h  vmm.h
kernel/include/arch/: arch.h  esr.h
kernel/include/devices/: gicv3.h  pl011.h  rtc.h  timer.h
kernel/include/devices/virtio/: virtio.h  virtio_blk.h
kernel/include/fs/: ext2.h  gpt.h  mbr.h  vfs.h
kernel/include/fs/ext2/: ext2.h  ext2_utils.h
kernel/include/mm/: heap.h  mm.h  vmm.h
kernel/init/: CMakeLists.txt  main.c
kernel/lib/: CMakeLists.txt
kernel/lib/fb/: CMakeLists.txt  fb_init.c  fb_write.c
kernel/lib/kstdio/: CMakeLists.txt  printf.c  putc.c  putchar.c  puts.c  snprintf.c  sprintf.c
kernel/lib/kstdlib/: CMakeLists.txt  assert.c
kernel/lib/kstring/: CMakeLists.txt  char16_to_ascii.c  memcmp.c  memcpy.c  memset.c  strcat.c  strchr.c  strcmp.c  strcpy.c  strdup.c  strlen.c  strncpy.c  strpbrk.c  strrchr.c  strspn.c  strtok.c  strtok_count.c  strtok_r.c
kernel/lib/list/: list_alloc.c  list_append.c  list_delete.c  list_destroy.c  list_find.c  list_free.c  list_init.c  list_insert.c  list_pop.c  list_push.c  list_remove.c
kernel/locking/: CMakeLists.txt  spinlock.c
kernel/mm/: CMakeLists.txt  alloc.c  heap.c  mm.c  pmm.c  slab.c  vmm.c
scripts/: CMakeLists.txt  install.sh  run.sh  run_debug.sh
